kubernetes-templates/standalone-yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: embracon-app
  labels:
    app: embracon-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: metrics
  selector:
    app: embracon-app
